# magpi-stellar-pops

./: .copier-answers.yml  .gitignore  404.html  MAGPI_config.yml  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/magpi_stellar_pops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: MAGPI_tools.py  spec_tools.py  spv_miles_util.py  utils.py
tests/: test_MAGPI_tools.py  test_utils.py
tests/test_data/: example_fits_table.fits
